--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
 			<type>pom</type>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/net.imglib2/imglib2-algorithms-gpl -->
+		<dependency>
+		    <groupId>net.imglib2</groupId>
+		    <artifactId>imglib2-algorithms-gpl</artifactId>
+		    <version>2.0.0-beta6</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
