--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
 		    <artifactId>imglib2-algorithms-gpl</artifactId>
 		    <version>2.0.0-beta6</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.8</version>
+		</dependency>
 
 	</dependencies>
 
